# y-craft

./: .gitignore  Cargo.toml  Makefile  README.md  shell.nix
cpp/: Makefile
cpp/img/: snake.xcf
cpp/include/engine/: GameObject.hpp  Room.hpp  globals.hpp
cpp/include/gameobjs/: TitleScreenImage.hpp
cpp/include/rooms/: title.hpp
cpp/src/: main.cpp
cpp/src/engine/: Font.cpp  Sprite.cpp  globals.cpp
cpp/src/gameobjs/: SnakeHead.cpp
examples/platformer/: game.rs  main.rs
examples/platformer/img/: brick.xcf  character.xcf
examples/snake/: dead.rs  end.rs  game.rs  game_room.rs  main.rs  play.rs  title.rs
examples/snake/img/: dead.xcf  win.xcf
img/: board.xcf  mouse.xcf  snake.xcf  title.xcf
include/: Audio.hpp  Brick.hpp  GameObject.hpp  Player.hpp  Room.hpp  Sprite.hpp  Window.hpp  math.hpp
include/engine/: Font.hpp  GameObject.hpp  Sprite.hpp  Window.hpp  globals.hpp
include/gameobjs/: Brick.hpp  Mouse.hpp  Player.hpp  SnakeHead.hpp
include/rooms/: Room0.hpp  game.hpp
src/: Audio.cpp  Brick.cpp  GameObject.cpp  Player.cpp  Room.cpp  Sprite.cpp  Window.cpp  app.rs  collision.rs  font.rs  game.rs  lib.rs  main.cpp  main.rs  math.cpp  obj.rs  res.rs  room.rs  snd.rs  spr.rs  util.rs
src/engine/: Audio.cpp  GameObject.cpp  Room.cpp  Window.cpp  globals.cpp  math.cpp
src/gameobjs/: Brick.cpp  Mouse.cpp  Player.cpp  SnakeHead.cpp  TitleScreenImage.cpp
src/rooms/: Room0.cpp  game.cpp  title.cpp
